benchmarks/kubectl-mtb/test/policies/block_use_of_nodeport_services/kyverno/block_use_of_nodeport_service.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-nodeport
spec:
  rules:
  - name: validate-nodeport
    match:
      resources:
        kinds:
        - Service
    validate:
      message: "Services of type NodePort are not allowed"
      pattern: 
        spec:
          type: "!NodePort"
